# observability-sandbox

./: AGENT_TODO.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  todo.md
.claude/: settings.local.json
apps/dice-roller/: pyproject.toml
apps/shiny-curl-gui/: Dockerfile  app.R
dice-roller/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
docs/diagrams/: observability-stack.md  stage1.md  stage2.md  stage3.md  stage4.md  stage5.md
grafana/provisioning/dashboards/: dashboards.yml
loki/: loki-config.yml
progressive/stage1/: README.md  docker-compose.yml
progressive/stage1/dice-roller/: main.py
progressive/stage1/grafana-dashboards/: stage1-dashboard.json
progressive/stage2/: README.md  docker-compose.yml
progressive/stage2/dice-roller/: main.py  pyproject.toml
progressive/stage2/frontend/: main.py
progressive/stage2/streamlit-frontend/: Dockerfile  app.py  pyproject.toml
progressive/stage2/traffic-gen/: README.md
progressive/stage3/: QUICK-START.md  docker-compose.yml
progressive/stage3/dice-roller/: main.py  pyproject.toml
progressive/stage3/die-service/: Dockerfile  die_specifications.json  main.py
progressive/stage3/frontend/: main.py
progressive/stage4/: DEPLOYMENT-VERIFIED.md  METRICS-VERIFIED.md  docker-compose.yml
progressive/stage4/frontend/: main.py  pyproject.toml
progressive/stage5/: README.md  docker-compose.yml
shiny-curl-gui/: Dockerfile  app.R  docker-compose.yml
specs/illustrative-python/: README.md  implementation-notes.md  overview.md  stage-comparison.md
specs/illustrative-python/stage2/traffic-gen/: generate_traffic.py  pyproject.toml
specs/illustrative-python/stage2/traffic-gen/traffic_gen_stage2.egg-info/: PKG-INFO  top_level.txt
specs/usage-stats/: overview.md
stack/: docker-compose.yml
stack/alloy/: config.alloy
stack/grafana/: grafana.ini
stack/otel-collector/: otel-collector-config.yml
stack/postgres/: init.sql
stack/prometheus/: prometheus.yml
stack/promtail/: promtail-config.yml
stack/tempo/: tempo-config.yml
usage-stats-receiver/: Dockerfile  main.py  pyproject.toml
(+52 files in other folders)
