[project]
name = "traffic-gen-stage2"
version = "1.0.0"
description = "Traffic generation script for Stage 2 with distributed tracing"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
]
